--- a/about.css
+++ b/about.css
@@ -1,5 +1,15 @@
+.topnav{
+    min-height: 60px;
+    padding-top: 30px;
+    word-spacing: 20px;
+    font-family: 'Comfortaa', cursive;}
+  
+   .topnav a:hover {
+      background-color: #ddd;
+      color: black;}
 
-.header{ text-align: left ;
+
+.header2{ text-align: left ;
     font-family: 'Comfortaa', cursive;
     font-size: 40px ;
     letter-spacing: 20px;
