--- a/emmamcgillis.css
+++ b/emmamcgillis.css
@@ -1,4 +1,12 @@
-
+.topnav{
+    min-height: 60px;
+    padding-top: 30px;
+    word-spacing: 20px;
+    font-family: 'Comfortaa', cursive;}
+  
+   .topnav a:hover {
+      background-color: #ddd;
+      color: black;}
 
 .header{display:grid;
 grid-template-columns: repeat(3, 1fr);
@@ -129,3 +137,48 @@ align-items: center;}
             font-family: 'Comfortaa', cursive;
             font-size: 30px; 
             padding-top: 50px;;}
+
+
+
+
+
+            
+
+            @media only screen and (min-width: 414px × 896px)
+
+        { .front-page { display: grid;
+         grid-template-columns: repeat(1, 1fr);
+         grid-template-rows: repeat(6,400px);}
+
+         .b{ grid-column: 1/1;
+            grid-row: 1/2 ;
+            }
+
+        .d { grid-column: 1/1;
+            grid-row: 2/3;}
+
+        .f {grid-column: 1/1;
+            grid-row:3/4;}
+
+        .h{ grid-column: 1/1;
+            grid-row: 4/5;}
+
+            .j {grid-column: 1/1;
+               grid-row: 5/6;}
+
+               .l {grid-column: 1/1;
+                  grid-row:6/7}
+
+
+
+
+
+
+
+
+
+
+
+        }
+                
+        
