--- a/emmamcgillis.css
+++ b/emmamcgillis.css
@@ -152,22 +152,28 @@ align-items: center;}
 
          .b{ grid-column: 1/1;
             grid-row: 1/2 ;
+            display: block;
             }
 
         .d { grid-column: 1/1;
-            grid-row: 2/3;}
+            grid-row: 2/3;
+            display: block;}
 
         .f {grid-column: 1/1;
-            grid-row:3/4;}
+            grid-row:3/4;
+            display: block;}
 
         .h{ grid-column: 1/1;
-            grid-row: 4/5;}
+            grid-row: 4/5;
+            display: block;}
 
             .j {grid-column: 1/1;
-               grid-row: 5/6;}
+               grid-row: 5/6;
+               display: block;}
 
                .l {grid-column: 1/1;
-                  grid-row:6/7}
+                  grid-row:6/7;
+                  display: block;}
 
 
 
