--- a/TandL.css
+++ b/TandL.css
@@ -70,3 +70,38 @@
             font-family: 'Comfortaa', cursive;
             font-size: 30px; 
             padding-top: 50px;}
+
+
+            @media screen and (max-width: 500px)
+            {  .content{ display:block;}
+    
+            .logo{display: none;}
+    
+            .title{ display: block;
+              align-content: center;}
+    
+            .narrative{display: block;
+               align-content: center;
+               margin-top:30px;
+                margin-bottom: 30px;
+                font-size: 16px; }
+
+            .image1{ display:flex;
+            height: 400px;
+            align-content: center;}
+
+            .images{display:grid;
+             grid-template-columns: repeat(1, 1fr);
+              grid-template-rows: repeat(2,300px);}
+
+              .image2{ display:flex;
+              align-content: center;
+              grid-row:1,2;
+              grid-column: 1/1;}
+
+              .image3{display:flex;
+                align-content: center;
+                grid-row:2,3;
+                grid-column: 1/1;}
+    
+            }
