--- a/emmamcgillis.css
+++ b/emmamcgillis.css
@@ -10,7 +10,8 @@
 
 .header{display:grid;
 grid-template-columns: repeat(3, 1fr);
-grid-template-rows: repeat(7,120px); }
+grid-template-rows: repeat(7,120px); 
+ }
 
 .emma{ grid-row: 4/5;
     grid-column: 2/3; 
@@ -18,7 +19,7 @@ grid-template-rows: repeat(7,120px); }
 font-family: 'Comfortaa', cursive;
 font-size: 60px ;
 letter-spacing: 20px;
-align-items: center;}
+align-items: center; }
 
 .arrow{ grid-row: 7/8 ;
        grid-column: 2/3; 
@@ -140,51 +141,40 @@ align-items: center;}
 
 
 
+          @media screen and (max-width: 500px)
+            
+            { 
+                .front-page { display: block;}
+    
+             .b { display: block;
+                justify-content: center;
+                }
+    
+            .d { 
+                display: block;
+                justify-content: center;}
+    
+            .f {
+                display: block;
+                justify-content: center;}
+    
+            .h{ 
+                display: block;
+                justify-content: center;}
+    
+                .j {
+                   display: block;
+                   justify-content: center;}
+    
+                   .l {
+                      display: block;
+                      justify-content: center;}
+    
+    
+                                          }
 
 
             
 
-            @media only screen and (min-width: 414px)
-
-        { .front-page { display: grid;
-         grid-template-columns: repeat(1, 1fr);
-         grid-template-rows: repeat(6,400px);}
-
-         .b{ grid-column: 1/1;
-            grid-row: 1/2 ;
-            display: block;
-            }
-
-        .d { grid-column: 1/1;
-            grid-row: 2/3;
-            display: block;}
-
-        .f {grid-column: 1/1;
-            grid-row:3/4;
-            display: block;}
-
-        .h{ grid-column: 1/1;
-            grid-row: 4/5;
-            display: block;}
-
-            .j {grid-column: 1/1;
-               grid-row: 5/6;
-               display: block;}
-
-               .l {grid-column: 1/1;
-                  grid-row:6/7;
-                  display: block;}
-
-
-
-
-
-
-
-
-
-
-
-        }
-                
+         
         
