--- a/mmc.css
+++ b/mmc.css
@@ -84,3 +84,41 @@ padding-top: 30px;}
     font-family: 'Comfortaa', cursive;
     font-size: 30px; 
     padding-top: 50px;}
+
+    
+
+        @media screen and (max-width: 500px)
+        {  .content{ display:block;}
+
+        .logo{display: none;}
+
+        .title{ display: block;
+          align-content: center;}
+
+        .narrative{display: block;
+           align-content: center;
+           margin-top:30px;
+            margin-bottom: 30px;
+            font-size: 16px; }
+
+            .ads{display: grid;
+             grid-template-columns: repeat(1, 1fr);
+             grid-template-rows: repeat(2,500px)
+             }
+
+        .ad1{ grid-row: 1/2;
+             grid-column: 1/1;
+            display: flex;
+             align-content: center;
+           }
+
+             .ad2{ grid-row: 2/3;
+                grid-column:1/1;
+                display: flex;
+                align-content: center;
+          }
+
+        .insert{display:none;}
+    
+
+        }
