--- a/perception.css
+++ b/perception.css
@@ -50,3 +50,23 @@
             font-family: 'Comfortaa', cursive;
             font-size: 30px; 
             padding-top: 50px;;}
+
+            @media screen and (max-width: 500px)
+            {  .content{ display:block;}
+    
+            .logo{display: none;}
+    
+            .title{ display: block;
+              align-content: center;}
+    
+            .narrative{display: block;
+               align-content: center;
+               margin-top:30px;
+                margin-bottom: 30px;
+                font-size: 16px; }
+
+                .image1{ display:flex;
+                  height: 400px;
+                  align-content: center;}}
+    
+            }
