--- a/emmamcgillis.css
+++ b/emmamcgillis.css
@@ -8,10 +8,11 @@
       background-color: #ddd;
       color: black;}
 
-.header{display:grid;
+.topcontent{display:grid;
 grid-template-columns: repeat(3, 1fr);
-grid-template-rows: repeat(7,120px); 
- }
+grid-template-rows: repeat(7,120px);  }
+
+
 
 .emma{ grid-row: 4/5;
     grid-column: 2/3; 
