--- a/TandL.css
+++ b/TandL.css
@@ -2,10 +2,19 @@
     min-height: 60px;
     padding-top: 30px;
     font-family: 'Comfortaa', cursive;}
+
+    .topnav{
+      min-height: 60px;
+      padding-top: 30px;
+      word-spacing: 20px;
+      font-family: 'Comfortaa', cursive;}
+
+
+    .topnav a{color:rgb(20, 29, 45);
+      text-decoration: none;}
   
-   .header a:hover {
-      background-color: #ddd;
-      color: black;}
+     .topnav a:hover { color: rgb(230,163,118); }  
+
 
       .content{ display:grid;
         grid-template-columns:repeat(2, 1fr);
@@ -24,7 +33,8 @@
            font-size: 50px;
            text-align: center;
            align-content: center;
-           padding-top: 100px;}
+           padding-top: 100px;
+           color:rgb(20, 29, 45);}
     
      .narrative{ 
          grid-row: 2/3;
@@ -38,7 +48,8 @@
          background-color:rgb(106,137,112) ;
         margin-top: 20px; 
         margin-bottom: 20px;
-        text-align: left; }
+        text-align: left;
+        color:rgb(20, 29, 45); }
 
         .image1{ 
             display: flex;
@@ -71,6 +82,10 @@
             font-size: 30px; 
             padding-top: 50px;}
 
+            .backtotop a{ color:rgb(20, 29, 45);
+              text-decoration: none;}
+  
+              .backtotop a:hover{ color: rgb(230,163,118);}
 
             @media screen and (max-width: 500px)
             {  .content{ display:block;}
