--- a/hotel.css
+++ b/hotel.css
@@ -2,10 +2,18 @@
     min-height: 60px;
     padding-top: 30px;
     font-family: 'Comfortaa', cursive;}
+   
+    .topnav{
+      min-height: 60px;
+      padding-top: 30px;
+      word-spacing: 20px;
+      font-family: 'Comfortaa', cursive;}
+
+    .topnav a{color:rgb(20, 29, 45);
+      text-decoration: none;}
   
-   .header a:hover {
-      background-color: #ddd;
-      color: black;}
+     .topnav a:hover { color: rgb(230,163,118); }  
+
      
       .content{ display:grid;
         grid-template-columns:repeat(2, 1fr);
@@ -24,7 +32,8 @@
            font-size: 60px;
            text-align: center;
            align-content: center;
-           padding-top: 100px;}
+           padding-top: 100px;
+           color:rgb(20, 29, 45);}
     
      .narrative{ 
          grid-row: 2/3;
@@ -38,7 +47,8 @@
          background-color:rgb(106,137,112) ;
         margin-top: 50px; 
         margin-bottom: 50px;
-        text-align: left; }
+        text-align: left; 
+        color:rgb(20, 29, 45);}
      
      .logos{ display: grid; 
         grid-template-columns:repeat(2, 1fr);
@@ -90,6 +100,11 @@ padding: 40px;}
         font-family: 'Comfortaa', cursive;
         font-size: 30px; 
         padding-top: 50px;;}
+
+        .backtotop a{ color:rgb(20, 29, 45);
+          text-decoration: none;}
+
+          .backtotop a:hover{ color: rgb(230,163,118);}
 
         @media screen and (max-width: 500px)
         {  .content{ display:block;}
