--- a/mmc.css
+++ b/mmc.css
@@ -4,9 +4,20 @@
     padding-top: 30px;
     font-family: 'Comfortaa', cursive;}
   
-   .header a:hover {
-      background-color: #ddd;
-      color: black;}
+   
+
+      .topnav{
+        min-height: 60px;
+        padding-top: 30px;
+        word-spacing: 20px;
+        font-family: 'Comfortaa', cursive;}
+    
+      .topnav a{color:rgb(20, 29, 45);
+        text-decoration: none;
+       }
+    
+       .topnav a:hover { color: rgb(230,163,118); }
+    
 
       .content{ display:grid;
         grid-template-columns:repeat(2, 1fr);
@@ -25,7 +36,8 @@
            font-size: 50px;
            text-align: center;
            align-content: center;
-           padding-top: 100px;}
+           padding-top: 100px;
+           color:rgb(20, 29, 45)}
     
      .narrative{ 
          grid-row: 2/3;
@@ -37,7 +49,8 @@
          font-size: 18px;
          line-height: 2.3;
          background-color:rgb(234,217,115) ;
-        text-align: left; }
+        text-align: left;
+        color:rgb(20, 29, 45); }
     
 .mmclogo{ display: flex;
     justify-content: center;
@@ -84,6 +97,11 @@ padding-top: 30px;}
     font-family: 'Comfortaa', cursive;
     font-size: 30px; 
     padding-top: 50px;}
+
+    .backtotop a{ color:rgb(20, 29, 45);
+      text-decoration: none;}
+
+      .backtotop a:hover{ color: rgb(230,163,118);}
 
     
 
