--- a/mtjoy.css
+++ b/mtjoy.css
@@ -1,12 +1,24 @@
 .header{
   min-height: 60px;
   padding-top: 30px;
-  font-family: 'Comfortaa', cursive;}
+  font-family: 'Comfortaa', cursive; }
 
  .header a:hover {
     background-color: #ddd;
-    color: black;}
+    color: black; }
 
+    .topnav{
+      min-height: 60px;
+      padding-top: 30px;
+      word-spacing: 20px;
+      font-family: 'Comfortaa', cursive;}
+  
+    .topnav a{color:rgb(20, 29, 45);
+      text-decoration: none;
+     }
+  
+     .topnav a:hover { color: rgb(230,163,118); }
+  
 
 
 .topcontent{ display:grid;
@@ -26,7 +38,8 @@
        font-size: 70px;
        text-align: center;
        align-content: center;
-       padding-top: 100px;}
+       padding-top: 100px; 
+       color:rgb(20, 29, 45);}
 
  .narrative{ 
      grid-row: 2/3;
@@ -40,7 +53,8 @@
      background-color:rgb(230,163,118) ;
     margin-top: 50px; 
     margin-bottom: 50px;
-    text-align: left; }
+    text-align: left;
+    color:rgb(20, 29, 45); }
 
      .images{ display: grid;
       grid-template-columns:repeat(2, 1fr);
@@ -73,6 +87,10 @@
               font-size: 30px; 
               padding-top: 50px;}
 
+              .backtotop a{ color:rgb(20, 29, 45);
+                text-decoration: none;}
+    
+                .backtotop a:hover{ color: rgb(230,163,118);}
 
               @media screen and (max-width: 500px)
               {  .topcontent{ display:block;}
