--- a/perception.css
+++ b/perception.css
@@ -4,9 +4,16 @@
     padding-top: 30px;
     font-family: 'Comfortaa', cursive;}
   
-   .header a:hover {
-      background-color: #ddd;
-      color: black;}
+    .topnav{
+      min-height: 60px;
+      padding-top: 30px;
+      word-spacing: 20px;
+      font-family: 'Comfortaa', cursive;}
+  
+    .topnav a{color:rgb(20, 29, 45);
+      text-decoration: none;}
+  
+     .topnav a:hover { color: rgb(230,163,118); }  
 
 
       .content{ display:grid;
@@ -26,7 +33,8 @@
            font-size: 50px;
            text-align: center;
            align-content: center;
-           padding-top: 100px;}
+           padding-top: 100px;
+           color:rgb(20, 29, 45);}
     
      .narrative{ 
          grid-row: 2/3;
@@ -40,7 +48,8 @@
          background-color:rgb(104,157,160) ;
         margin-top: 50px; 
         margin-bottom: 50px;
-        text-align: left; }
+        text-align: left; 
+        color:rgb(20, 29, 45);}
 
     .image1{ display: flex;
          justify-content: center;}
@@ -50,6 +59,11 @@
             font-family: 'Comfortaa', cursive;
             font-size: 30px; 
             padding-top: 50px;;}
+
+            .backtotop a{ color:rgb(20, 29, 45);
+              text-decoration: none;}
+  
+              .backtotop a:hover{ color: rgb(230,163,118);}
 
             @media screen and (max-width: 500px)
             {  .content{ display:block;}
@@ -67,6 +81,5 @@
 
                 .image1{ display:flex;
                   height: 400px;
-                  align-content: center;}}
-    
-            }
+                  align-content:center;}
+                }
